Updated gitignore file to ignore sub-directories recursive from the current folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # Ranorex Specific files
-/Testing/[Rr]eports
-/Testing/*.rxlog
-/Testing/*.rxlog.data
-/Testing/*.jpg
-/Testing/*.rxuser
-/Testing/*.pref
-/Testing/TCS_LIB.dll
+**/*[Rr]eports
+**/*.rxlog
+**/*.rxlog.data
+**/*.jpg
+**/*.rxuser
+**/*.pref
+**/*TCS_LIB.dll
 
 # Build results
-/Testing/[Dd]ebug/
-/Testing/[Dd]ebugPublic/
-/Testing/[Rr]elease/
-/Testing/x64/
-/Testing/build/
-/Testing/bld/
-/Testing/[Bb]in/
-/Testing/[Oo]bj/
+**/*[Dd]ebug/
+**/*[Dd]ebugPublic/
+**/*[Rr]elease/
+**/*x64/
+**/*build/
+**/*bld/
+**/*[Bb]in/
+**/*[Oo]bj/
 
 # Visual Studio profiler
-/Testing/*.psess
-/Testing/*.vsp
-/Testing/*.vspx
+**/*.psess
+**/*.vsp
+**/*.vspx
