--- a/_assets/engine/engine.csproj
+++ b/_assets/engine/engine.csproj
@@ -1,21 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
-    <ProjectGuid>{2E228EBF-FF11-4148-BC93-9F804814E115}</ProjectGuid>
+    <ProjectGuid>{BF4B32B6-CF80-4DB8-9174-BEB5813E0108}</ProjectGuid>
     <TargetFrameworkProfile />
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Testing</RootNamespace>
-    <AssemblyName>Testing</AssemblyName>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <OutputType>Library</OutputType>
+    <RootNamespace>engine</RootNamespace>
+    <AssemblyName>engine</AssemblyName>
     <RanorexVersion>8.0</RanorexVersion>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <RanorexTargetsPath>$(MSBuildProgramFiles32)\MSBuild\Ranorex$(RanorexVersion)\Ranorex.MSBuild.Targets</RanorexTargetsPath>
-    <projectdefaultrepository>7abbc418-5409-4caa-81e8-1a7f3c587cc2</projectdefaultrepository>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
-    <Prefer32Bit>True</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -32,6 +31,9 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ranorex.Bootstrapper">
@@ -110,61 +112,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
-      <id>41476c5c-269a-4565-b148-5a2b020bbca6</id>
-    </Compile>
-    <Compile Include="Program.cs">
-      <id>7154f617-be58-48a0-8b15-59b20196d24d</id>
-    </Compile>
-    <Compile Include="Recording1.cs">
-      <BoundTo>260e287c-7df7-4b99-ae1a-a7a5c20b3efc</BoundTo>
-      <DependentUpon>Recording1.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>1cad0935-a7f2-4a04-85c9-c6ed6ab93cd4</id>
-    </Compile>
-    <Compile Include="Recording1.UserCode.cs">
-      <BoundTo>260e287c-7df7-4b99-ae1a-a7a5c20b3efc</BoundTo>
-      <DependentUpon>Recording1.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>0d09be22-9eed-4285-a7c9-372b934f7bdc</id>
-    </Compile>
-    <Compile Include="TestingRepository.cs">
-      <BoundTo>7abbc418-5409-4caa-81e8-1a7f3c587cc2</BoundTo>
-      <DependentUpon>TestingRepository.rxrep</DependentUpon>
-      <RepositoryCode>true</RepositoryCode>
-      <id>e9200725-9be0-43f0-bbfb-3a6b312cc890</id>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config">
-      <id>0718ffa8-f47e-4895-b60e-b9410c5f3bf2</id>
-    </None>
-    <None Include="Recording1.rxrec">
-      <BoundTo>7abbc418-5409-4caa-81e8-1a7f3c587cc2</BoundTo>
-      <id>260e287c-7df7-4b99-ae1a-a7a5c20b3efc</id>
-      <recordtableid>8034de30-3179-49f6-a2e5-cc0f988597fe</recordtableid>
-    </None>
-    <None Include="TestingRepository.rximg">
-      <BoundTo>7abbc418-5409-4caa-81e8-1a7f3c587cc2</BoundTo>
-      <DependentUpon>TestingRepository.rxrep</DependentUpon>
-      <imageblob>true</imageblob>
-      <id>e0533e1f-c992-496b-8fe3-61e39230b2bf</id>
-    </None>
-    <None Include="TestingRepository.rxrep">
-      <id>7abbc418-5409-4caa-81e8-1a7f3c587cc2</id>
-      <repoid>e6f6738d-0194-44b8-8541-0faf519ea483</repoid>
-      <reporootid>2fcb8634-dacb-4703-bc62-32f9d778f67d</reporootid>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Testing.rxtmg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <id>eabd0269-5fef-41f4-883f-a1256c629159</id>
-    </Content>
-    <Content Include="Testing.rxtst">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <id>ccb29370-4118-4030-9f74-31a51af887c2</id>
-    </Content>
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="MyClass.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(RanorexTargetsPath)" Condition="Exists('$(RanorexTargetsPath)')" />
