--- a/PrecisionRecruitment/RanorexAutomationHelpers/Ranorex Automation Helpers.csproj
+++ b/PrecisionRecruitment/RanorexAutomationHelpers/Ranorex Automation Helpers.csproj
@@ -113,40 +113,41 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Modules\CollectRetryErrorMessagesModule.cs">
-      <id>026b049b-e59d-4184-98cd-93eb61c78723</id>
+      <id>8f410cce-7441-4c00-a994-dbd3d795dbc9</id>
     </Compile>
     <Compile Include="Modules\EmailModule.cs">
-      <id>9dc2e280-24e6-40bd-a2f7-c842fcbe6cf7</id>
+      <id>9ed11add-5994-421c-90f4-e89d3bcfbd94</id>
     </Compile>
     <Compile Include="Modules\ReportToPDFModule.cs">
-      <id>eb579a7e-d0c0-4ee7-baec-31ce25d7f0dc</id>
+      <id>07ec2048-c666-4484-a1e6-c97b20e0a964</id>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Compile>
     <Compile Include="UserCodeCollections\DragNDropLibrary.cs">
-      <id>f50133cb-827a-425d-8af9-97072d888ead</id>
+      <id>5d5207a5-6c42-40f5-9985-53c666c90d2e</id>
     </Compile>
     <Compile Include="UserCodeCollections\EmailLibrary.cs">
-      <id>0be4f956-2d4b-40eb-9400-5e6c5f59d4e2</id>
+      <id>ef602f4f-f84a-4560-8813-7ae635fd27cc</id>
     </Compile>
     <Compile Include="UserCodeCollections\FileLibrary.cs">
-      <id>3c8da67c-2612-4b8f-99fc-2bd379f7b52a</id>
+      <id>aa2daf13-e441-46bc-ab4e-b6d667fe9ad9</id>
     </Compile>
     <Compile Include="UserCodeCollections\NumberGenerator.cs">
       <id>a8f36d1b-73f1-48fe-9dbf-9c9a2b2905d6</id>
     </Compile>
     <Compile Include="UserCodeCollections\PopupWatcherLibrary.cs">
-      <id>09ac3bfd-42af-40d8-b19f-65c226775c2f</id>
+      <id>76663f25-213e-4a24-8d1c-cac73e1c8631</id>
     </Compile>
     <Compile Include="UserCodeCollections\StringLibrary.cs">
-      <id>fb077d97-0335-457f-91d2-93d82829f1eb</id>
+      <id>a2f4b8c8-80b4-420a-b956-aa1b1a1af817</id>
     </Compile>
     <Compile Include="UserCodeCollections\SystemLibrary.cs">
-      <id>72c4bccd-6295-4c9e-8464-75a4acd14ff8</id>
+      <id>53241047-ace4-49e5-9bb6-0271a9f72962</id>
     </Compile>
     <Compile Include="UserCodeCollections\ValidationLibrary.cs">
-      <id>0f81b91b-2965-4d6e-b9df-a2d5156a58bb</id>
+      <id>5a8a652c-4ca9-4e8c-9bb4-5317f41c3a7d</id>
     </Compile>
     <Compile Include="UserCodeCollections\WebLibrary.cs">
-      <id>07ac9148-fb0e-433d-8a37-43f45dfca31b</id>
+      <id>78577943-5840-4c92-9852-52acab876565</id>
     </Compile>
   </ItemGroup>
   <ItemGroup>
