Added generate extract test case and made some minor improvements

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -1201,6 +1201,54 @@
       <id>212ed259-6e6e-4977-acb6-fb8cf0cd58b3</id>
       <BoundTo>2a328a38-dba2-4ee5-bcf2-2ec16a1dba8d</BoundTo>
     </Compile>
+    <Compile Include="ExtractsPage\Click_DownloadExtract_Button.cs">
+      <BoundTo>4f4a5e80-6031-406a-aca2-bf906a5d93c7</BoundTo>
+      <DependentUpon>Click_DownloadExtract_Button.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>390bc56b-899f-49e6-b9c6-bef06d84c4c3</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Click_DownloadExtract_Button.UserCode.cs">
+      <BoundTo>4f4a5e80-6031-406a-aca2-bf906a5d93c7</BoundTo>
+      <DependentUpon>Click_DownloadExtract_Button.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>9d22e9b9-a61a-40f6-91a4-d7957ba34b3e</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Click_Extracts_Tab.cs">
+      <BoundTo>33cc9515-18c4-410c-a79c-700c63a85a84</BoundTo>
+      <DependentUpon>Click_Extracts_Tab.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>6866f7ab-f14d-4d79-8b84-e34abacca621</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Click_Extracts_Tab.UserCode.cs">
+      <BoundTo>33cc9515-18c4-410c-a79c-700c63a85a84</BoundTo>
+      <DependentUpon>Click_Extracts_Tab.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>b2931b55-7626-4514-9b7f-ff21735dae59</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Select_PR_Extract.cs">
+      <BoundTo>36db5384-1d4a-43f8-97af-a1d3afa8f8b7</BoundTo>
+      <DependentUpon>Select_PR_Extract.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d68a4767-b289-4232-bc0e-571df6ce19e1</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Select_PR_Extract.UserCode.cs">
+      <BoundTo>36db5384-1d4a-43f8-97af-a1d3afa8f8b7</BoundTo>
+      <DependentUpon>Select_PR_Extract.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>bf48d006-1342-4a38-a52e-37aa31147562</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Validate_Extract_Downloaded.cs">
+      <BoundTo>5019bcee-2111-4859-8950-3ba4715812c5</BoundTo>
+      <DependentUpon>Validate_Extract_Downloaded.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>e2f4039d-2365-4042-832b-2c49efb9af6b</id>
+    </Compile>
+    <Compile Include="ExtractsPage\Validate_Extract_Downloaded.UserCode.cs">
+      <BoundTo>5019bcee-2111-4859-8950-3ba4715812c5</BoundTo>
+      <DependentUpon>Validate_Extract_Downloaded.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>01959793-bfe5-420c-88b8-d978a3c6c9ca</id>
+    </Compile>
     <Compile Include="General\Clear_Gmail_Inbox.cs">
       <BoundTo>10e18e6a-73ea-4bdb-829e-211e11718e2e</BoundTo>
       <DependentUpon>Clear_Gmail_Inbox.rxrec</DependentUpon>
@@ -1609,6 +1657,30 @@
       <id>53c5f9d4-63fb-4f71-8f59-d148e4b2345a</id>
       <BoundTo>002905fd-0aad-4561-a1a7-d5ade02b409c</BoundTo>
     </Compile>
+    <Compile Include="StudiesPage\Click_Next_Page.cs">
+      <BoundTo>8debdf21-b0f0-417d-9d83-da7de5ac280d</BoundTo>
+      <DependentUpon>Click_Next_Page.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>2b7b736e-0804-42a5-85c3-537bf8077ec6</id>
+    </Compile>
+    <Compile Include="StudiesPage\Click_Next_Page.UserCode.cs">
+      <BoundTo>8debdf21-b0f0-417d-9d83-da7de5ac280d</BoundTo>
+      <DependentUpon>Click_Next_Page.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>98ca3473-9de5-4afd-a65c-7df3ccd68462</id>
+    </Compile>
+    <Compile Include="StudiesPage\Click_Previous_Page.cs">
+      <BoundTo>54423c54-5049-48ef-9b4b-e4d8f07ea20d</BoundTo>
+      <DependentUpon>Click_Previous_Page.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>7c542f58-6597-4084-a3bc-b06ccaa225b9</id>
+    </Compile>
+    <Compile Include="StudiesPage\Click_Previous_Page.UserCode.cs">
+      <BoundTo>54423c54-5049-48ef-9b4b-e4d8f07ea20d</BoundTo>
+      <DependentUpon>Click_Previous_Page.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>301c750c-cec4-4358-b7a4-04d70d98325a</id>
+    </Compile>
     <Compile Include="StudiesPage\Click_Sort_ProjectName.cs">
       <BoundTo>03d26f47-7780-4c89-949f-a069675f6aa9</BoundTo>
       <DependentUpon>Click_Sort_ProjectName.rxrec</DependentUpon>
@@ -1644,6 +1716,9 @@
       <DependentUpon>Click_Sort_Sponsor.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>d297b74e-bf1b-48c6-a670-281f234228e7</id>
+    </Compile>
+    <Compile Include="StudiesPage\Validate_Next_Page.cs">
+      <id>136de71c-4f36-45ea-8085-096c2d814b65</id>
     </Compile>
     <Compile Include="StudiesPage\Select_All_Localities.cs">
       <BoundTo>3b09e9f2-518c-4c14-a55a-ffd42a0a8679</BoundTo>
@@ -1692,6 +1767,9 @@
       <DependentUpon>Validate_Available_Localities.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>5a740fee-c310-4b2c-a9b8-af1c78318946</id>
+    </Compile>
+    <Compile Include="StudiesPage\Validate_Previous_Page.cs">
+      <id>32adcde7-1ed7-4721-a423-33a3c84adebb</id>
     </Compile>
     <Compile Include="StudiesPage\Validate_ProjectName_Ascending.cs">
       <id>45950243-c67f-4ba6-9aa5-c399652690c3</id>
@@ -2462,6 +2540,26 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>e57a54fc-47b7-46ef-bc2e-3f0bea0cb472</id>
     </Content>
+    <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>4f4a5e80-6031-406a-aca2-bf906a5d93c7</id>
+      <recordtableid>234b1f5c-68a2-482c-83c2-19a84626ffef</recordtableid>
+    </None>
+    <None Include="ExtractsPage\Click_Extracts_Tab.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>33cc9515-18c4-410c-a79c-700c63a85a84</id>
+      <recordtableid>d5368a46-4f21-4c59-9938-9575f485d7cb</recordtableid>
+    </None>
+    <None Include="ExtractsPage\Select_PR_Extract.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>36db5384-1d4a-43f8-97af-a1d3afa8f8b7</id>
+      <recordtableid>83aa1e02-85d2-4526-b992-2fc4405345e3</recordtableid>
+    </None>
+    <None Include="ExtractsPage\Validate_Extract_Downloaded.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>5019bcee-2111-4859-8950-3ba4715812c5</id>
+      <recordtableid>4488b4f0-9d37-4ce0-af17-188ef70d7a63</recordtableid>
+    </None>
     <None Include="General\Clear_Gmail_Inbox.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>10e18e6a-73ea-4bdb-829e-211e11718e2e</id>
@@ -2680,6 +2778,16 @@
       <id>002905fd-0aad-4561-a1a7-d5ade02b409c</id>
       <recordtableid>de058b0d-f9a9-4f98-a4f3-cdbe8c067c4d</recordtableid>
     </None>
+    <None Include="StudiesPage\Click_Next_Page.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>8debdf21-b0f0-417d-9d83-da7de5ac280d</id>
+      <recordtableid>17d84ed7-a0ca-4eed-8e0b-eadafcc073f1</recordtableid>
+    </None>
+    <None Include="StudiesPage\Click_Previous_Page.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>54423c54-5049-48ef-9b4b-e4d8f07ea20d</id>
+      <recordtableid>04fd8901-f09e-4136-8f5f-114eb0f04410</recordtableid>
+    </None>
     <None Include="StudiesPage\Click_Sort_ProjectName.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>03d26f47-7780-4c89-949f-a069675f6aa9</id>
@@ -2880,6 +2988,9 @@
     </Folder>
     <Folder Include="General">
       <id>48fd90e5-ea81-4fa2-b9d3-73f6b8aa176d</id>
+    </Folder>
+    <Folder Include="ExtractsPage">
+      <id>bd83b410-bd36-4887-86fc-8de10ba18e20</id>
     </Folder>
     <Folder Include="UsersPage">
       <id>2585d631-e37a-4bd2-8fe1-9317e9fc8485</id>
