--- a/_assets/engine/engine.csproj
+++ b/_assets/engine/engine.csproj
@@ -164,13 +164,13 @@
     <Compile Include="Helpers\WebService.cs">
       <id>5c7d965d-3852-436a-86d2-0453b176bdca</id>
     </Compile>
-    <Compile Include="NoLearn.cs">
+    <Compile Include="KeyLearning\NoLearn.cs">
       <id>18e52793-9049-4b60-bd23-5858d2a6db4b</id>
     </Compile>
-    <Compile Include="YesLearn.cs">
+    <Compile Include="KeyLearning\YesLearn.cs">
       <id>8763fd0a-db06-4c8b-9ca2-06db2a1167e3</id>
     </Compile>
-    <Compile Include="YesNoLearn.cs">
+    <Compile Include="KeyLearning\YesNoLearn.cs">
       <id>14cf5fe2-9b54-44c9-b44f-e17b8098fb22</id>
     </Compile>
   </ItemGroup>
@@ -180,6 +180,9 @@
     </Folder>
     <Folder Include="Helpers">
       <id>7ee5a589-5589-4efb-96d7-07e88da6c895</id>
+    </Folder>
+    <Folder Include="KeyLearning">
+      <id>757dec28-3b34-4217-84ee-55811c28ae10</id>
     </Folder>
   </ItemGroup>
   <ItemGroup>
